# dice-game

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cicd/: build.sh  pack.sh  run
contracts/: CMakeLists.txt
contracts/include/dice/: dice.hpp
contracts/src/: dice.cpp
tests/: CMakeLists.txt  contracts.hpp.in  dice_tests.cpp
